--- a/src/components/ContactUs.css
+++ b/src/components/ContactUs.css
@@ -1,9 +1,53 @@
-.contact-us-container {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #f5f5f5;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-  
+.login-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-color: #f5f5f5; /* Background color for the entire page */
+}
+
+.contact-us-box {
+  background-color: #fff; /* Background color for the login box */
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  border-radius: 5px;
+  width: 500px;
+  /* text-align: center; */
+}
+
+.input-group {
+  margin-bottom: 15px;
+  text-align: left;
+}
+
+.login-button {
+  background-color: #007bff; /* Login button background color */
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+  font-size: 16px;
+  margin-top: 10px;
+}
+
+.login-button:hover {
+  background-color: #0056b3; /* Button color on hover */
+}  
+
+.password-input {
+  position: relative;
+  display: inline-block;
+}
+
+.password-toggle {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+
+.password-toggle i {
+  font-size: 1.2rem;
+}
