--- a/src/components/LoginPage.css
+++ b/src/components/LoginPage.css
@@ -12,7 +12,7 @@
     padding: 20px;
     border-radius: 5px;
     width: 300px;
-    text-align: center;
+    /* text-align: center; */
   }
 
   .input-group {
