--- a/src/components/ResetPasswordPage.css
+++ b/src/components/ResetPasswordPage.css
@@ -1,4 +1,4 @@
-.signup-container {
+.login-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -6,21 +6,21 @@
     background-color: #f5f5f5; /* Background color for the entire page */
   }
   
-  .signup-box {
-    background-color: #fff; /* Background color for the signup box */
+  .login-box {
+    background-color: #fff; /* Background color for the login box */
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     padding: 20px;
     border-radius: 5px;
     width: 300px;
     /* text-align: center; */
   }
-  
+
   .input-group {
     margin-bottom: 15px;
     text-align: left;
   }
   
-  .signup-button {
+  .login-button {
     background-color: #007bff; /* Login button background color */
     color: #fff;
     padding: 10px 20px;
@@ -31,6 +31,23 @@
     margin-top: 10px;
   }
   
-  .signup-button:hover {
+  .login-button:hover {
     background-color: #0056b3; /* Button color on hover */
   }  
+
+  .password-input {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .password-toggle {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    cursor: pointer;
+  }
+  
+  .password-toggle i {
+    font-size: 1.2rem;
+  }
