changed addto cart button length

--- a/src/components/PopupProduct.css
+++ b/src/components/PopupProduct.css
@@ -88,7 +88,7 @@
     cursor: pointer;
     font-size: 18px;
     transition: background-color 0.2s;
-    width: 20em;
+    width: 39vh;
     margin-left: 10px;
   }
   
